--- a/index/base.html
+++ b/index/base.html
@@ -13,7 +13,16 @@
   <a href="register.html">Register</a>
   <a href="meet.html">Meet</a>
   <a href="meeting.html">Meeting</a>
-</nav>
+</nav>{% extends 'templates/base.html' %}
+{% extends 'base.html' %}
+
+{% block title %} Dashboard {% endblock %}
+
+{% block content %}
+    <h1>Welcome to the Dashboard</h1>
+    <p>This is your dashboard content.</p>
+{% endblock %}
+
 <body>
 <section class="vh-100 gradient-custom">
   <div class="container py-5 h-100">
